--- a/src/GPSet2_Bert(Vscode).ipynb
+++ b/src/GPSet2_Bert(Vscode).ipynb
@@ -813,7 +813,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "w6GTT71YpBmo"
       },
@@ -838,19 +838,34 @@
         }
       ],
       "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
         "from sklearn.metrics import silhouette_score\n",
         "from sklearn.mixture import GaussianMixture\n",
         "\n",
         "sil_scores = []  # List to store silhouette scores for each n\n",
+        "components_range = list(range(2, 51))  # Range of GMM components\n",
         "\n",
-        "# Try different numbers of GMM components (clusters) from 2 to 20\n",
-        "for n in range(2, 21):\n",
-        "    gmm = GaussianMixture(n_components=n, random_state=42)  # Create GMM with n clusters\n",
-        "    labels = gmm.fit_predict(reduced_embeddings)  # Fit GMM and get cluster labels\n",
-        "    sil = silhouette_score(reduced_embeddings, labels)  # Compute silhouette score for current clustering\n",
-        "    sil_scores.append(sil)  # Store the score\n",
+        "# Try different numbers of GMM components (clusters) from 2 to 50\n",
+        "for n in components_range:\n",
+        "    gmm = GaussianMixture(n_components=n, random_state=42)\n",
+        "    labels = gmm.fit_predict(reduced_embeddings)\n",
+        "    sil = silhouette_score(reduced_embeddings, labels)\n",
+        "    sil_scores.append(sil)\n",
         "\n",
-        "best_n = np.argmax(sil_scores) + 2  # Get the n with highest silhouette score (offset by +2 due to range start)\n"
+        "best_n = components_range[np.argmax(sil_scores)]\n",
+        "\n",
+        "# Visualization\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.plot(components_range, sil_scores, marker='o', linestyle='-', label='Silhouette Score')\n",
+        "plt.axvline(x=best_n, color='red', linestyle='--', label=f'Best n = {best_n}')\n",
+        "plt.title('Silhouette Scores for GMM Clustering (n=2 to 50)')\n",
+        "plt.xlabel('Number of Components')\n",
+        "plt.ylabel('Silhouette Score')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
       ]
     },
     {
